# claude-hq

./: .gitignore  README.md  install.sh  package-lock.json  package.json  start.sh  uninstall.sh
hooks/: claude_hq_hook.py  install_hooks.py  settings.snippet.json
src/: git.js  index.html  preview.html  renderer.js  socket.js  sprites.js  terminal.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  tray.rgba
src-tauri/src/: event.rs  git.rs  install.rs  lib.rs  main.rs  parser.rs  pty.rs  ws.rs
src/assets/characters/: agent.json
src/assets/office/: office.json
tools/: gen_chars.py  gen_icon.py  gen_office.py  gen_scene.py  transcript_tailer.py
