[package]
name = "claude-hq"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_hq_core"
path = "src/lib.rs"

[[bin]]
name = "claude-hq"
path = "src/main.rs"

[[bin]]
name = "claude-hq-shim"
path = "src/bin/shim.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
strip-ansi-escapes = "0.2"
nix = { version = "0.29", features = ["term", "signal", "fs"] }
dirs = "5"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
